--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,5 +1,10 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+@plugin "@tailwindcss/typography";
 
+@plugin "daisyui" {
+  themes: light, dracula, dark --default --prefersdark;
+  logs: true;
+}
 /* This file is for your main application CSS */
